添加了post发布者和发布时间
Signed-off-by: hnoycy <hnoycy@126.com>

--- a/ForumService/GobangGameWcfService/ForumService.csproj
+++ b/ForumService/GobangGameWcfService/ForumService.csproj
@@ -88,6 +88,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Post.cs" />
     <Compile Include="commentInfo.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
